--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,162 +1,222 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(HiQSimulator)
+set(_policy_list
+    CMP0012
+    CMP0023
+    CMP0028
+    CMP0042
+    CMP0048
+    CMP0051
+    CMP0054
+    CMP0057
+    CMP0074)
+foreach(_policy ${_policy_list})
+  if(POLICY ${_policy})
+    cmake_policy(SET ${_policy} NEW)
+  endif()
+  # CMP0012: if() recognizes numbers and booleans
+  # CMP0028: :: in target names
+  # CMP0042: MACOS_RPATH
+  # CMP0048: allow VERSION in project()
+  # CMP0051: list TARGET_OBJECTS in SOURCES property
+  # CMP0054: no more de-referencing of "expr" in if() statements
+  # CMP0057: if IN_LIST
+  # CMP0074: XXX_ROOT variables for find_package(XXX)
+endforeach()
 
-include(CheckIncludeFileCXX)
+# ==============================================================================
+# Macro definitions
 
-message("*** Building ${CMAKE_BUILD_TYPE} configuration ***")
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/macros.cmake)
 
-IF(USE_INTRIN STREQUAL "BUF")
-  ADD_DEFINITIONS(-DINTRIN_CF)
-  MESSAGE("Using intrin with buffer")
-ELSEIF(USE_INTRIN STREQUAL "NO")
-  ADD_DEFINITIONS(-DNOINTRIN)
-  MESSAGE("Using no intrinsics")
-ELSE(USE_INTRIN)
-  ADD_DEFINITIONS(-DINTRIN)
-  MESSAGE("Using default intrin")
-ENDIF(USE_INTRIN STREQUAL "BUF")
+# ==============================================================================
+# Create the HiQSimulator project
 
-find_package(MPI REQUIRED)
-include_directories(SYSTEM ${MPI_INCLUDE_PATH})
+project(HiQSimulator LANGUAGES CXX)
 
-find_package(Boost REQUIRED
-        COMPONENTS program_options mpi serialization thread
-        )
+# Set a default build type if none was specified
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "Setting build type to 'Release' as none was specified.")
+  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
+  # Set the possible values of build type for cmake-gui
+  set_property(CACHE CMAKE_BUILD_TYPE
+               PROPERTY STRINGS
+                        "Debug"
+                        "Release"
+                        "RelWithDebInfo")
+endif()
 
-find_library(Glog_LIBRARY glog PATHS ~/.nix-profile/lib)
+list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
-find_library(HWLOC_LIBRARY hwloc PATHS ~/.nix-profile/lib)
+#==============================================================================
+# Options
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -fopenmp -fPIC -fpic  -Wall -Wextra -pedantic -pie -march=native")
-set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/options.cmake)
 
-get_directory_property(defines COMPILE_DEFINITIONS)
-message("*** common definitions (-D): ${defines}")
-message("*** CMAKE_CXX_FLAGS        : ${CMAKE_CXX_FLAGS}")
-message("*** CMAKE_CXX_FLAGS_RELEASE: ${CMAKE_CXX_FLAGS_RELEASE}")
+# ==============================================================================
+# Package dependencies
 
-set(FLAGS_MPI "")
-set(CMAKE_CXX_FLAGS_DEBUG_MPI "${CMAKE_CXX_FLAGS_DEBUG} ${MPI_COMPILE_FLAGS} ${FLAGS_MPI}")
-set(CMAKE_CXX_FLAGS_RELEASE_MPI "${CMAKE_CXX_FLAGS_RELEASE} ${MPI_COMPILE_FLAGS} ${FLAGS_MPI}")
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/packages.cmake)
+
+#==============================================================================
+# Setup compiler flags
+
+set(CMAKE_CXX_STANDARD 14) # might decay to C++11
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+check_compiler_flags(_compile_flags_release
+                     "-ffast-math /fp:fast -fast"
+                     "-O3 /Ox"
+                     "-march=native -xHost /QxHost")
+
+add_compile_options(
+  "$<$<AND:$<CONFIG:RELEASE>,$<COMPILE_LANGUAGE:CXX>>:${_compile_flags_release_cxx}>"
+  )
+
+check_compiler_flags(_avx2_flag "-mavx2 -xCORE-AVX2 /QxCORE-AVX2 /arch:AVX2")
+
+# ------------------------------------------------------------------------------
+
+set(FLAGS_MPI)
+set(CMAKE_CXX_FLAGS_DEBUG_MPI
+    "${CMAKE_CXX_FLAGS_DEBUG} ${MPI_COMPILE_FLAGS} ${FLAGS_MPI}")
+set(CMAKE_CXX_FLAGS_RELEASE_MPI
+    "${CMAKE_CXX_FLAGS_RELEASE} ${MPI_COMPILE_FLAGS} ${FLAGS_MPI}")
 
 set(CMAKE_LINK_FLAGS_DEBUG_MPI "${MPI_LINK_FLAGS}")
 set(CMAKE_LINK_FLAGS_RELEASE_MPI "${MPI_LINK_FLAGS}")
 
+# ------------------------------------------------------------------------------
+
+set(CMAKE_DEBUG_POSTFIX "d")
+set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")
+set(CMAKE_MINSIZEREL_POSTFIX "rm")
+
+# ==============================================================================
+
+message("*** Building ${CMAKE_BUILD_TYPE} configuration ***")
+
 add_subdirectory(pybind11)
 
-add_subdirectory("src")
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/src)
 
-include_directories("src")
-include_directories(${Boost_INCLUDE_DIR})
+# ==============================================================================
 
 add_executable(qswap qswap.cpp)
-target_link_libraries(qswap permutations ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE})
+target_link_libraries(qswap permutations Boost::program_options)
+
+# --------------------------------------
+
+add_executable(qswap-mpi qswap-mpi.cpp src/simulator-mpi/SwapperMT.cpp)
+target_compile_definitions(qswap-mpi PRIVATE -DSIMULATOR_LIBRARY_EXPORT)
+target_link_libraries(qswap-mpi
+                      permutations
+                      ${MPI_LIBRARIES}
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      OpenMP::OpenMP_CXX)
+
+# ------------------------------------------------------------------------------
 
 add_executable(opyt opyt.cpp)
-target_link_libraries(opyt ${Boost_LIBRARIES})
+target_link_libraries(opyt
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      OpenMP::OpenMP_CXX
+                      glog::glog)
 
-add_executable(socket-test socket-test.cpp)
-target_link_libraries(socket-test ${Boost_LIBRARIES})
-
-add_executable(himembind himembind.cpp)
-target_link_libraries(himembind ${HWLOC_LIBRARY})
-
-pybind11_add_module(_sched_cpp _sched_cpp.cpp
-        src/scheduler/swap_scheduler.h
-        src/scheduler/cluster_scheduler.h
-        src/scheduler/convertors.h
-        src/scheduler/definitions.h
-        src/scheduler/swap_scheduler.cpp
-        src/scheduler/cluster_scheduler.cpp
-        src/scheduler/convertors.cpp
-        )
-
-target_link_libraries(_sched_cpp PUBLIC
-        ${Glog_LIBRARY}
-        )
-
-add_executable(qswap-mpi
-        qswap-mpi.cpp
-        src/simulator-mpi/SwapperMT.hpp
-        src/simulator-mpi/SwapperMT.cpp
-        )
-target_link_libraries(qswap-mpi permutations
-        ${MPI_LIBRARIES}
-        ${Boost_LIBRARIES}
-        ${Glog_LIBRARY}
-        )
-
-
-add_library(SimulatorMPI_o OBJECT
-        src/simulator-mpi/SwapperMT.hpp
-        src/simulator-mpi/SwapperMT.cpp
-        src/simulator-mpi/swapping.hpp
-        src/simulator-mpi/SimulatorMPI.hpp
-        src/simulator-mpi/SimulatorMPI.cpp
-        src/simulator-mpi/fusion_mpi.hpp
-        src/simulator-mpi/alignedallocator.hpp
-
-        src/simulator-mpi/kernels/intrin/cintrin.hpp
-        src/simulator-mpi/kernels/intrin/kernel3.hpp
-        src/simulator-mpi/kernels/intrin/kernel2.hpp
-        src/simulator-mpi/kernels/intrin/kernel5.hpp
-        src/simulator-mpi/kernels/intrin/kernels.hpp
-        src/simulator-mpi/kernels/intrin/kernel1.hpp
-        src/simulator-mpi/kernels/intrin/kernel4.hpp
-        src/simulator-mpi/kernels/intrin/kernels_diag.hpp
-
-        src/simulator-mpi/kernels/intrin_cf/kernel3.hpp
-        src/simulator-mpi/kernels/intrin_cf/kernel2.hpp
-        src/simulator-mpi/kernels/intrin_cf/kernel5.hpp
-        src/simulator-mpi/kernels/intrin_cf/kernels.hpp
-        src/simulator-mpi/kernels/intrin_cf/kernel1.hpp
-        src/simulator-mpi/kernels/intrin_cf/kernel4.hpp
-
-        src/simulator-mpi/kernels/nointrin/kernel3.hpp
-        src/simulator-mpi/kernels/nointrin/kernel2.hpp
-        src/simulator-mpi/kernels/nointrin/kernel5.hpp
-        src/simulator-mpi/kernels/nointrin/kernels.hpp
-        src/simulator-mpi/kernels/nointrin/kernel1.hpp
-        src/simulator-mpi/kernels/nointrin/kernel4.hpp
-        src/simulator-mpi/kernels/nointrin/kernels_diag.hpp
-
-        )
-
-add_library(SimulatorMPI SHARED $<TARGET_OBJECTS:SimulatorMPI_o>)
-target_link_libraries(SimulatorMPI
-        permutations
-        ${MPI_LIBRARIES}
-        ${Boost_LIBRARIES}
-        ${Glog_LIBRARY}
-        )
-
-add_executable(cppsim-mpi cppsim-mpi.cpp
-        src/simulator-mpi/SimulatorMPI.hpp
-        )
-
-target_link_libraries(cppsim-mpi
-        SimulatorMPI
-        ${MPI_LIBRARIES}
-        ${Boost_LIBRARIES}
-        ${Glog_LIBRARY}
-        )
+# --------------------------------------
 
 add_executable(opyt-mpi opyt-mpi.cpp)
 target_link_libraries(opyt-mpi
-        ${MPI_LIBRARIES}
-        ${Boost_LIBRARIES}
-        )
+                      ${MPI_LIBRARIES}
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      OpenMP::OpenMP_CXX
+                      glog::glog)
 
+# ------------------------------------------------------------------------------
 
-pybind11_add_module(_cppsim_mpi _cppsim_mpi.cpp $<TARGET_OBJECTS:SimulatorMPI_o>)
-target_link_libraries(_cppsim_mpi PUBLIC
-        ${MPI_LIBRARIES}
-        ${Boost_MPI_LIBRARY_RELEASE}
-        ${Boost_THREAD_LIBRARY_RELEASE}
-        ${Boost_SERIALIZATION_LIBRARY_RELEASE}
-        ${Glog_LIBRARY}
-        )
+add_executable(socket-test socket-test.cpp)
+target_link_libraries(socket-test
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      OpenMP::OpenMP_CXX)
+
+# ------------------------------------------------------------------------------
+
+add_executable(himembind himembind.cpp)
+target_link_libraries(himembind hwloc::hwloc)
+
+# ------------------------------------------------------------------------------
+
+pybind11_add_module(_sched_cpp
+                    _sched_cpp.cpp
+                    src/scheduler/swap_scheduler.cpp
+                    src/scheduler/cluster_scheduler.cpp
+                    src/scheduler/convertors.cpp)
+target_link_libraries(_sched_cpp PUBLIC glog::glog)
+
+# ------------------------------------------------------------------------------
+
+add_library(SimulatorMPI_o
+            OBJECT
+            src/simulator-mpi/SwapperMT.cpp
+            src/simulator-mpi/SimulatorMPI.cpp)
+target_link_libraries(SimulatorMPI_o permutations Boost::mpi OpenMP::OpenMP_CXX)
+if(WIN32)
+  target_compile_definitions(SimulatorMPI_o PRIVATE -DSIMULATOR_LIBRARY_EXPORT)
+endif()
+
+add_library(SimulatorMPI SHARED $<TARGET_OBJECTS:SimulatorMPI_o>)
+target_link_libraries(SimulatorMPI
+                      permutations
+                      ${MPI_LIBRARIES}
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      OpenMP::OpenMP_CXX)
+
+# ------------------------------------------------------------------------------
+
+add_executable(cppsim-mpi cppsim-mpi.cpp)
+target_link_libraries(cppsim-mpi
+                      SimulatorMPI
+                      ${MPI_LIBRARIES}
+                      Boost::program_options
+                      Boost::mpi
+                      Boost::serialization
+                      Boost::thread
+                      glog::glog
+                      OpenMP::OpenMP_CXX)
+
+# ------------------------------------------------------------------------------
+
+pybind11_add_module(_cppsim_mpi _cppsim_mpi.cpp
+                    $<TARGET_OBJECTS:SimulatorMPI_o>)
+target_link_libraries(_cppsim_mpi
+                      PUBLIC ${MPI_LIBRARIES}
+                             Boost::mpi
+                             Boost::serialization
+                             Boost::thread
+                             glog::glog
+                             OpenMP::OpenMP_CXX)
+
+# ------------------------------------------------------------------------------
 
 pybind11_add_module(_cppstabsim _cppstabsim.cpp)
-target_compile_options(_cppstabsim PUBLIC "-mavx2")
+target_link_libraries(_cppstabsim PRIVATE Boost::boost)
+add_avx2_to_target(_cppstabsim)
+
+# ==============================================================================
