--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(permutations STATIC simulator-mpi/funcs.cpp)
+add_library(permutations OBJECT simulator-mpi/funcs.cpp)
 
 target_link_libraries(permutations Boost::boost glog::glog)
