--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ sudo: true
 language: python
 
 before_install:
+  - sudo apt-get update
   - sudo apt-get install build-essential cmake
   - sudo apt-get install openmpi-bin openmpi-doc libopenmpi-dev
-  - sudo apt-get install libboost-dev libboost-all-dev
+  - sudo apt-get install libboost-all-dev
   - sudo apt-get install libgoogle-glog-dev
   - sudo apt-get install python3 python3-pip
  
