--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-themes/next/dist: xenial # Ubuntu 16.04
+dist: xenial
 sudo: true
 language: python
 
@@ -9,16 +9,10 @@ before_install:
   - sudo apt-get install libboost-all-dev
   - sudo apt-get install libgoogle-glog-dev
   - sudo apt-get install python3 python3-pip
- 
-matrix:
-  include:
-  - os: linux
-    python: "3.6"
 
 install:
-  - if [ "${PYTHON:0:1}" = "3" ]; then export PY=3; fi
-  - pip$PY install -r requirements.txt
-  - pip$PY install -e .
+  - pip3 install -r requirements.txt
+  - pip3 install -e .
 
 # command to run tests
 script:
