--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,16 @@ install:
 
 # command to run tests
 script:
+  - python3 examples/BV_algorithm_constant_mpi.py
+  - python3 examples/exactgrover_mpi.py
   - python3 examples/grover_mpi.py
+  - python3 examples/maximum_search_constant_mpi.py
+  - python3 examples/phase_estimation_mpi.py
+  - python3 examples/qecc9_sta.py
+  - python3 examples/shor_mpi.py
+  - python3 examples/SymMatrixSolver_mpi.py
+  - python3 examples/teleport_mpi.py
+  - python3 examples/ToeplitzSimplify_constant.py
+  - python3 examples/grover_mpi.py
+  - python3 examples/unknown_num_search_constant_mpi.py
  
