CMake: add Boost.Test, tweak clang-format config and other fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,11 @@ include(${CMAKE_CURRENT_LIST_DIR}/cmake/options.cmake)
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/packages.cmake)
 
+# ==============================================================================
+# Unit testing
+
+enable_testing()
+
 #==============================================================================
 # Setup compiler flags
 
