--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11
+[submodule "xsimd"]
+	path = xsimd
+	url = https://github.com/QuantStack/xsimd.git
