--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,2 +1,18 @@
-conda:
-    file: docs/environment.yml
+# .readthedocs.yml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/source/conf.py
+
+python:
+  install:
+    - requirements: docs/requirements_rtd.txt
+    - method: pip
+      path: .
+      
+
