--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ matrix:
   #   before_install:
   #     - choco install python3
   #     - ...
+  fast_finish: true
   allow_failures:
   - os: osx
     language: generic
