--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(permutations OBJECT simulator-mpi/funcs.cpp)
+add_library(permutations OBJECT simulator-mpi/funcs.hpp
+                                simulator-mpi/funcs.cpp)
