--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,3 +271,9 @@ else()
 endif()
 
 # ==============================================================================
+
+# Add the cmake folder so the FindSphinx module is found
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+
+
+add_subdirectory ("docs")
