Fix src/CMakeLists.txt for documentation building

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_library(permutations OBJECT simulator-mpi/funcs.hpp
-                                simulator-mpi/funcs.cpp)
+add_library(permutations OBJECT simulator-mpi/funcs.cpp)
+target_sources(permutations INTERFACE ${SRC_DIR}/simulator-mpi/funcs.hpp)
+list(APPEND _doc_targets permutations)
