--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
-add_library(permutations OBJECT simulator-mpi/funcs.cpp)
-target_sources(permutations INTERFACE ${SRC_DIR}/simulator-mpi/funcs.hpp)
-list(APPEND _doc_targets permutations)
+define_object_library(permutations
+                      SOURCES
+                      ${CMAKE_CURRENT_LIST_DIR}/simulator-mpi/funcs.cpp
+                      HEADERS
+                      ${CMAKE_CURRENT_LIST_DIR}/simulator-mpi/funcs.hpp
+                      DEPENDENCIES
+                      glog::glog)
